2014-03-26 Is attempted command for Fractions addon
2014-03-25 New addons Points and Lines and Edge Animation
2014-03-25 Fixed problem with report score for not visited pages
2014-03-25 Fixed problem with reset and set state in Submit module
2014-03-24 "Return first score" flag modifies how the score is presented to the user
2014-03-24 New module Submit, which acts like a Check module, but checks results only when all modules are in attempted state
2014-03-24 Added handling custom events in the Advanced Connector
2014-03-24 Added custom event to event bus
2014-03-21 Added command isAttempted to Image Gap module
2014-03-21 Added new text properties to check button
2014-03-21 Added checkAnswers and uncheckAnswers method to Player API
2014-03-21 Added command isAttempted to Text module
2014-03-21 New addon: Hierarchical_Lesson_Report
2014-03-19 Fixed issue with special characters external links in Text module
2014-03-19 Added getModules method to Player API
2014-03-19 Fixed problem with Tex in Video module
2014-03-19 Added Coloring module
2014-03-18 Fixed problem with links in page styles.
2014-03-18 Added sending events to Text Selection module
2014-03-17 Added addon Shape Tracing
2014-03-14 Added command isAttempted to choice
2014-03-12 Player can return first or last score
2014-03-11 Fixed problem with Animation module commands execution on PageLoaded event
2014-03-11 Player API extended to return page id
2014-03-07 Added AllOK event and isAllOK command in Text module
2014-03-07 Fixed problem with parsing addon properties
2014-03-07 Fixed issue with icon pages on navigation bar for mLibro. 
2014-03-07 New addon connecting dots and updated fractions
2014-03-06 Added enableAllGaps and disableAllGaps commands in Table module
2014-03-06 Added enableAllGaps and disableAllGaps commands in Text module
2014-03-06 Added injecting 'event' object into Advanced Connector module scripts
2014-03-04 Added property for external links target in Text module.